Fix name of business, oof!!

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ title: A tiny web studio
 ---
 
 <div class="mark">
-  <div class="name">HBYRD</div>
+  <div class="name">HYBRD</div>
 </div>
 
 <div class="description">
